file counting and uneven prevention

--- a/src/app.css
+++ b/src/app.css
@@ -151,8 +151,14 @@ section {
   	transform: translateY(-50%);
 }
 
-#chosenPath {
+#chosenPath, .fileCounter {
 	color: white;
+    font-size: 12px;
+    margin-top: 10px;
+}
+
+.error {
+	color: red;
     font-size: 12px;
     margin-top: 10px;
 }
